--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -283,7 +283,7 @@
 </div>
         <div class = "grid-container">
           <div class="grid-item">
-          <button type="button" id="b0" class="small_btn">SET ELECTION<br>TERRITORY</button>
+          <button type="button" id="b0" class="small_btn">SPARE<br></button>
           </div>
             <div class="grid-item">
               <button type = "button" id = "b1" class = "small_btn" onclick="setActionForm('filelist',filelist='maps')">Boundary<br>Maps</button>
